# hw-analysis

./: README.md  calculate_gear_ratios.py  drivetrainDirectionalPerformance.m  drivetrainDirectionalPerformance2.m  flake.nix  pyproject.toml  robot_kinematics.m  robot_model.py
Solenoid Models/: Bought Solenoid Plunger.FEM  Bought Solenoid Plunger.ans  Custom Solenoid Plunger.FEM  S-22-150-HF Solenoid Air.FEM  S-22-150-HF Solenoid Plunger copy.FEM  S-22-150-HF Solenoid Plunger.FEM  S-22-150-HF Solenoid Plunger.ans  plunger.py  plunger_dist.py  plunger_dist_buy.py  plunger_iteration.py  plunger_time.py  plunger_time_buy.py  requirements.txt
kalman_filter/: KalmanFilter.ipynb  filter.hpp
kalman_filter/VelocityKalmanTuner/: KalmanFilter.ipynb  KalmanFilter.py  LinearDynamics.py  RobotModel.py  SteadyStateKalmanFilter.py  UI.py  filter.hpp  requirements.txt  vkt.py
motor_model/: Model1_pos.txt  Model2_neg.txt  Model3_p_1_i_0.0001.txt  Model3_p_1_i_0.txt  motor_model.py  new_Model1_pos.txt  new_Model2_neg.txt  new_Model3_current.txt  new_Model3_p_1_i_0.0001.txt
motor_models/: df45_50W_model.py
